--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>نظام إدارة المركبات</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-light" dir="rtl">
   <div class="container py-5">
@@ -25,7 +25,7 @@
       <tbody id="vehicleTableBody" class="text-center"></tbody>
     </table>
   </div>
-  <script src="js/index.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
 
